removed images as they dont provide to the call to action.. they are just generic images. fixed light/dark mode toggle. put a temp favicon. added two new files, one for temp favicon and one for the theme button pulse effect

--- a/styles/toggle-theme.css
+++ b/styles/toggle-theme.css
@@ -1,6 +1,7 @@
 /*Inspired by https://www.florin-pop.com/blog/2019/03/css-pulse-effect/*/
 
 .celestial-icon{
+	border-radius: 50%;
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
 	transform: scale(1);
 
@@ -30,8 +31,8 @@
 }
 
 .celestial-icon.pulse-sun {
-    border-radius: 50%;
-	box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+	border-radius: 50%;
+	box-shadow: 0 0 0 0 rgba(252, 229, 112, 1);
 	animation: pulse-yellow 2s infinite;
 }
 
